--- a/style.css
+++ b/style.css
@@ -31,14 +31,46 @@ main {
 }
 
 header {
-    height: 100px;
-    display: flex;
-    align-items: center;
-    gap: 24px;
-    color: #FFFFFF;
-    padding-left: 75px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  color: #ffffff;
+  padding-left: 75px;
 }
 
 header span {
-    font-weight: 600;
+  font-weight: 600;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.background-logo {
+  position: absolute;
+  width: 100%;
+  max-height: 100%;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: -1;
+}
+
+.content-text {
+  position: absolute;
+  color: #ffffff;
+  font-size: 2.5rem;
+  width: 240px;
+  transform: translateX(-100%);
+  text-align: end;
+}
+
+.content-image {
+  height: 85vh;
 }
