--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   height: 100vh;
   display: flex;
   flex-direction: column;
-  background: linear-gradient(#cf2425, #da6062 50%, #da6062 60%, #da3b3f);
+  background: linear-gradient(#cf2425, #da6062d7 50%, #da6062 60%, #da3b3f);
 }
 
 footer {
@@ -72,7 +72,6 @@ main {
 
 .content-image {
   height: 85vh;
-  z-index: 1;
 }
 
 footer {
